Fix dark mode UI bugs

--- a/src/pyterrier-doc/src/css/custom.css
+++ b/src/pyterrier-doc/src/css/custom.css
@@ -17,18 +17,6 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #4f89ec;
-  --ifm-color-primary-dark: #4574c7;
-  --ifm-color-primary-darker: #375ea5;
-  --ifm-color-primary-darkest: #2f5494;
-  --ifm-color-primary-light: #4a7ed9;
-  --ifm-color-primary-lighter: #538aea;
-  --ifm-color-primary-lightest: #82b0ff;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-}
-
 .flex {
   display: flex;
 }
@@ -46,7 +34,7 @@
   gap: 10px;
 }
 
-[data-theme='dark'] * {
+[data-theme='dark'] .text {
   color: ghostwhite;
 }
 
@@ -54,22 +42,72 @@
   background-color: #dfdfdf;
 }
 
-[data-theme='dark'] .button--secondary{
-  background-color: #313030;
-  border: none;
+.error--elements {
+  color: red;
 }
 
 .dsla-search-wrapper{
   width: 10rem;
 }
 
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Dark mode styling */
+[data-theme='dark'] {
+  --ifm-color-primary: #4f89ec;
+  --ifm-color-primary-dark: #4574c7;
+  --ifm-color-primary-darker: #375ea5;
+  --ifm-color-primary-darkest: #2f5494;
+  --ifm-color-primary-light: #4a7ed9;
+  --ifm-color-primary-lighter: #538aea;
+  --ifm-color-primary-lightest: #82b0ff;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+[data-theme='dark'] div .aa-DetachedSearchButtonIcon,
+[data-theme='dark'] div .aa-DetachedSearchButtonPlaceholder,
+[data-theme='dark'] div .aa-DetachedSearchButtonQuery,
+[data-theme='dark'] .aa-Input{
+  color: ghostwhite;
+}
+
+[data-theme='dark'] .MuiDataGrid-columnHeader, 
+[data-theme='dark'] .MuiDataGrid-cellContent,
+[data-theme='dark'] .MuiDataGrid-menuIconButton > svg,
+[data-theme='dark'] .MuiDataGrid-editInputCell > input{
+  color: ghostwhite;
+}
+
+[data-theme='dark'] .button--secondary{
+  background-color: #313030;
+  border: none;
+}
+
+[data-theme='dark'] .icon,
+[data-theme='dark'] .breadcrumbs__link,
+[data-theme='dark'] .MuiSelect-iconStandard {
+  color: ghostwhite;
+}
+
+[data-theme='dark'] .MuiTablePagination-selectLabel,
+[data-theme='dark'] .MuiTablePagination-select,
+[data-theme='dark'] .MuiTablePagination-displayedRows,
+[data-theme='dark'] div.MuiTablePagination-actions > button > svg{
+  color: ghostwhite;
+}
+
+[data-theme='dark'] li > .MuiListItemIcon-root > svg,
+[data-theme='dark'] .MuiListItemText-root > span  {
+  color: ghostwhite;
+}
+
+[data-theme='dark'] button:disabled > svg.icon,
+[data-theme='dark'] div.MuiTablePagination-actions > button:disabled > svg
+{
+  color: #636363 !important;
+}
 
 [data-theme='dark'] .text--link {
   color: var(--ifm-color-primary-lightest);
-}
-
-.error--elements {
-  color: red;
 }
 
 [data-theme='dark'] .error--elements {
@@ -77,6 +115,8 @@
   font-weight: bold;
 }
 
+[data-theme='dark'] .MuiDataGrid-cell,
+[data-theme='dark'] .MuiDataGrid-row--editing,
 [data-theme='dark'] .MuiDataGrid-menuList {
-  background-color: #636363;
+  background-color: #313030 !important;
 }
